--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <!-- Centered Buttons -->
         <div class="flex justify-between space-x-4">
           <a
-            href="/src/pages/register.html"
+            href="./src/pages/register.html"
             class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-md hover:bg-secondary2 flex items-center justify-center"
           >
             Registrarse
           </a>
           <a
-            href="/src/pages/paginaRedireccions.html"
+            href="./src/pages/paginaRedireccions.html"
             class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-md hover:bg-secondary2 flex items-center justify-center"
           >
             Iniciar Sesió
