--- a/src/pages/trivia.html
+++ b/src/pages/trivia.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="bg-secondary2 p-4 mx-8 my-4 rounded-lg shadow-md text-center">
-      <h2 class="font-bold text-2xl mb-3">Información</h2>
+      <h2 class="font-bold text-2xl mb-3">Informació</h2>
     </div>
     <div class="bg-secondary2 p-6 mx-12 my-4 rounded-lg shadow-md">
       <p class="text-gray-800 text-lg mb-5 leading-relaxed">
