--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -56,7 +56,7 @@
             <!-- Back arrow and Register button -->
             <div class="flex items-center justify-between">
                 <!-- Back arrow icon with link to index.html -->
-                <a href="/public/index.html" class="text-blue-600 hover:text-blue-800 transition duration-300">
+                <a href="/index.html" class="text-blue-600 hover:text-blue-800 transition duration-300">
                     <i class="fas fa-arrow-left"></i> <!-- Back arrow icon -->
                 </a>
                 <!-- Register button -->
